Brand decoration and some changes.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="header-container">
           <p class="shopping-info">Free shipping for all orders <strong style=>$200</strong></p>
           <div class="navigation-bar">
-            <div class="navigation-item">My Account</div>
-            <div class="navigation-item">Cart</div>
-            <div class="navigation-item">Wishlist</div>
-            <div class="navigation-item">Checkout</div>
-          </div>
+            <a href="/" class="navigation-item">My Account</a>
+            <a href="/" class="navigation-item">Cart</a>
+            <a href="/" class="navigation-item">Wishlist</a>
+            <a href="/" class="navigation-item">Checkout</a>
+          </div> 
         </div>        
       </header>
       <main class="content">
@@ -50,6 +50,7 @@
                 <button onclick="onclickShoppingCart()">
                   <i class="fa-solid fa-bag-shopping"></i>
                 </button>
+                <span>2</span>
               </div>
               <p class="shopping-cart-total-price">$54.90</p>
               <div id="shoppingCartWidget" class="shopping-cart-widget">
@@ -62,7 +63,9 @@
                         <span>Qty 1</span>
                         <h2 class="product-price">$90.00</h2>
                       </div>
-                      <button>x</button>
+                      <button>
+                        <i class="fa-solid fa-x"></i>
+                      </button>
                     </div>
                     <div class="shopping-cart-item">
                       <img src="/images/komodine-me-dru-teak.jpg" alt="">
@@ -71,19 +74,25 @@
                         <span>Qty 1</span>
                         <h2 class="product-price">$55.00</h2>
                       </div>
-                      <button>x</button>
-                    </div>
+                      <button>
+                        <i class="fa-solid fa-x"></i>
+                      </button>
+                    </div>                    
                     <div class="shopping-cart-total">
                       <div class="shopping-cart-total-actions">
                         <span>Subtotal</span>
-                        <span>Shipping</span>
-                        <span>Taxes</span>
-                        <span>Total</span>
-                      </div>
-                      <div class="shopping-cart-total-prices">
                         <span>$145.00</span>
+                      </div>
+                      <div class="shopping-cart-total-actions">
+                        <span>Shipping</span>
                         <span>$7.00</span>
+                      </div>
+                      <div class="shopping-cart-total-actions">
+                        <span>Taxes</span>
                         <span>$0.00</span>
+                      </div>
+                      <div class="shopping-cart-total-actions">
+                        <span>Total</span>
                         <span>$152.00</span>
                       </div>
                     </div>
@@ -780,35 +789,13 @@
               </div>
             </div>
           </div>
-          <div class="page-content-services">
-            <div class="page-content-services-item">
-              <i class="fa-solid fa-paper-plane fa-2xl"></i>
-              <div class="page-content-services-description">
-                <span>Free Shipping</span>
-                <span>On all orders over $75.00</span>
-              </div>
-            </div>
-            <div class="page-content-services-item">
-              <i class="fa-solid fa-arrow-rotate-right fa-2xl"></i>
-              <div class="page-content-services-description">
-                <span>Easy 30 Days Returns</span>
-                <span>30 days money back</span>
-              </div>
-            </div>
-            <div class="page-content-services-item">
-              <i class="fa-solid fa-credit-card fa-2xl"></i>
-              <div class="page-content-services-description">
-                <span>100% Secure</span>
-                <span>Pay/Pal Master Card/ Visa</span>
-              </div>
-            </div>
-            <div class="page-content-services-item">
-              <i class="fa-solid fa-life-ring fa-2xl"></i>
-              <div class="page-content-services-description">
-                <span>24/7 Support</span>
-                <span>We will be at your service</span>
-              </div>
-            </div>
+          <div class="brand-logo-container ">
+            <img src="/images/prestige.jpg">            
+            <img src="/images/prestige.jpg">            
+            <img src="/images/prestige.jpg">            
+            <img src="/images/prestige.jpg">            
+            <img src="/images/prestige.jpg">            
+            <img src="/images/prestige.jpg">            
           </div>
         </div>
       </main>
@@ -817,7 +804,7 @@
           <div class="subscribe-section-container">
             <div class="subscribe-section-title">
               <i class="fa-solid fa-paper-plane fa-2xl"></i>
-              <span>Free Shipping</span>
+              <span>Subscribe Newsletter And Get Discount</span>
             </div>
             <div class="subscribe-container">
               <input type="email" class="subscribe-email-input" placeholder="Enter email address"/>
