--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
               <div class="search-box">
               <input type="text" placeholder="Search products"/>
                 <button>
-                  <i class="fa-solid fa-search fa-xl"></i>
+                  <a href="/" class="search-button">
+                    <i class="fa-solid fa-search fa-xl"></i>
+                  </a>
                 </button>
               </div>
               <div class="page-content-header-action-item">
                 <button>
-                  <i class="fa-solid fa-heart"></i>
+                  <a href="/" class="like-button">
+                    <i class="fa-solid fa-heart"></i>
+                  </a>
                 </button>
                 <span>2</span>
               </div>
@@ -103,15 +107,30 @@
             </div>
           </div>
           <div class="page-content-navigation">
-            <div class="page-content-navigation-department">
-              <p class="page-content-department"><i class="fa-solid fa-list"></i>All Department</p>
-            </div>
+                <a href="/" class="page-content-department-button">
+                  <i class="fa-solid fa-list"></i>
+                  <span>All Department</span>
+                </a>
             <div class="page-content-navigation-bar">
-              <div class="page-content-navigation-bar-items selected">HOME <i class="fa-solid fa-chevron-down"></i></div>
-              <div class="page-content-navigation-bar-items">SHOP <i class="fa-solid fa-chevron-down"></i></div>
-              <div class="page-content-navigation-bar-items">BLOG <i class="fa-solid fa-chevron-down"></i></div>
-              <div class="page-content-navigation-bar-items">PAGES <i class="fa-solid fa-chevron-down"></i></div>
-              <div class="page-content-navigation-bar-items">CONTACT</div>
+              <a href="/" class="page-content-navigation-bar-items selected">
+                HOME
+                <i class="fa-solid fa-chevron-down"></i>
+              </a>
+              <a href="/" class="page-content-navigation-bar-items">
+                SHOP
+                <i class="fa-solid fa-chevron-down"></i>
+              </a>
+              <a href="/" class="page-content-navigation-bar-items">
+                BLOG
+                <i class="fa-solid fa-chevron-down"></i>
+              </a>
+              <a href="/" class="page-content-navigation-bar-items">
+                PAGES
+                <i class="fa-solid fa-chevron-down"></i>
+              </a>
+              <a href="/" class="page-content-navigation-bar-items">
+                CONTACT
+              </a>
             </div>
           </div>
         </div>
@@ -164,14 +183,18 @@
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <button>Shop Now</button>
+                <a href="/" class="shop-now-button">
+                  <button>Shop Now</button>
+                </a>
               </div>
             </div>
             <div class="shop-actions-item">
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <button>Shop Now</button>
+                <a href="/" class="shop-now-button">
+                  <button>Shop Now</button>
+                </a>
               </div>
             </div>
           </div>
@@ -583,8 +606,24 @@
             </div>
           </div>
           <div class="page-content-ads">
-            <div class="page-content-ads-products"></div>
-            <div class="page-content-ads-products"></div>
+            <div class="shop-actions-item">
+              <div class="shop-actions-container">
+                <h2>Living Room Set</h2>
+                <h1>Hauteville Plywood New Chair</h1>
+                <a href="/" class="shop-now-button">
+                  <button>Shop Now</button>
+                </a>
+              </div>
+            </div>
+            <div class="shop-actions-item">
+              <div class="shop-actions-container">
+                <h2>Living Room Set</h2>
+                <h1>Hauteville Plywood New Chair</h1>
+                <a href="/" class="shop-now-button">
+                  <button>Shop Now</button>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="categories-content">
             <div class="categories-column">
@@ -874,12 +913,12 @@
               <div class="social-media">
                 <p>Copyright © 2019 All rights reserved.</p>
                 <div class="social-media-brands">
-                  <i class="fa-brands fa-facebook"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-linkedin"></i>
-                  <i class="fa-solid fa-wifi"></i>
-              </div>
+                  <a href="/" class="social-media-button"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="/" class="social-media-button"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="/" class="social-media-button"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="/" class="social-media-button"><i class="fa-brands fa-linkedin"></i></a>
+                  <a href="/" class="social-media-button"><i class="fa-solid fa-wifi"></i></a>
+                </div>
               </div>
               <div class="payments-info">
                 <p>Allow payment based on</p>
