--- a/index.html
+++ b/index.html
@@ -36,17 +36,13 @@
             <div class="page-content-header-actions">
               <div class="search-box">
               <input type="text" placeholder="Search products"/>
-                <button>
-                  <a href="/" class="search-button">
-                    <i class="fa-solid fa-search fa-xl"></i>
-                  </a>
+                <button class="search-button">
+                  <i class="fa-solid fa-search fa-xl"></i>
                 </button>
               </div>
               <div class="page-content-header-action-item">
-                <button>
-                  <a href="/" class="like-button">
-                    <i class="fa-solid fa-heart"></i>
-                  </a>
+                <button class="like-button">
+                  <i class="fa-solid fa-heart"></i>
                 </button>
                 <span>2</span>
               </div>
@@ -116,19 +112,19 @@
                 HOME
                 <i class="fa-solid fa-chevron-down"></i>
               </a>
-              <a href="/" class="page-content-navigation-bar-items">
+              <a href="/">
                 SHOP
                 <i class="fa-solid fa-chevron-down"></i>
               </a>
-              <a href="/" class="page-content-navigation-bar-items">
+              <a href="/">
                 BLOG
                 <i class="fa-solid fa-chevron-down"></i>
               </a>
-              <a href="/" class="page-content-navigation-bar-items">
+              <a href="/">
                 PAGES
                 <i class="fa-solid fa-chevron-down"></i>
               </a>
-              <a href="/" class="page-content-navigation-bar-items">
+              <a href="/">
                 CONTACT
               </a>
             </div>
@@ -142,10 +138,17 @@
               <p class="product-category">Modern Furniture</p>
               <p class="product-price">$250.45</p>
             </div>
-            <div class="page-content-ads-item">
-              <p class="product-name">Wooden Chair.</p>
-              <p class="product-category">Modern Furniture</p>
-              <p class="product-price">$250.45</p>
+            <div class="page-content-ads-item-console">
+              <p class="console-name">Console Tables</p>
+              <p class="console-category">Beoplay A1</p>
+              <p class="console-category">Sound Accessories</p>
+              <i class="fa-solid fa-circle-arrow-right"></i>
+            </div>
+            <div class="page-content-ads-item-console inverted">
+              <p class="console-name">Console Tables</p>
+              <p class="console-category">Beoplay A1</p>
+              <p class="console-category">Sound Accessories</p>
+              <i class="fa-solid fa-circle-arrow-right"></i>
             </div>
           </div>
           <div class="page-content-services">
@@ -183,18 +186,14 @@
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <a href="/" class="shop-now-button">
                   <button>Shop Now</button>
-                </a>
               </div>
             </div>
             <div class="shop-actions-item">
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <a href="/" class="shop-now-button">
-                  <button>Shop Now</button>
-                </a>
+                  <button class="shop-now-button">Shop Now</button>
               </div>
             </div>
           </div>
@@ -394,8 +393,12 @@
                 </div>
               </div>
             </div>
+            <div class="slider-pagination">
+              <span class="active"></span>
+              <span></span>
+            </div>
           </div>
-          <div class="shop-actions-categories">
+          <div class="shop-actions-categories">            
             <h1 class="shop-actions-categories-title">
               Furniture & Decor
             </h1>
@@ -847,7 +850,7 @@
             </div>
             <div class="subscribe-container">
               <input type="email" class="subscribe-email-input" placeholder="Enter email address"/>
-              <button>Subscribe</button>
+                <button>Subscribe</button>
             </div>
           </div>
         </div>
@@ -883,21 +886,21 @@
               </div>
               <div class="footer-navigation-group">
                 <p>Information</p>
-                <span>Contact</span>
-                <span>About Us</span>
-                <span>Privacy Policy</span>
-                <span>Costumer Service</span>
-                <span>Frequently Questions</span>
-                <span>Delivery Information</span>
+                <a href="/">Contact</a>
+                <a href="/">About Us</a>
+                <a href="/">Privacy Policy</a>
+                <a href="/">Costumer Service</a>
+                <a href="/">Frequently Questions</a>
+                <a href="/">Delivery Information</a>
               </div>
               <div class="footer-navigation-group">
                 <p>My Account</p>
-                <span>Cart</span>
-                <span>Wishlist</span>
-                <span>Chechokut</span>
-                <span>FAQ</span>
-                <span>My Account</span>
-                <span>Privacy Policy</span>
+                <a href="/">Cart</a>
+                <a href="/">Wishlist</a>
+                <a href="/">Chechokut</a>
+                <a href="/">FAQ</a>
+                <a href="/">My Account</a>
+                <a href="/">Privacy Policy</a>
               </div>
               <div class="footer-navigation-group tweeter-feed">
                 <p>Latest tweets</p>
@@ -913,11 +916,11 @@
               <div class="social-media">
                 <p>Copyright © 2019 All rights reserved.</p>
                 <div class="social-media-brands">
-                  <a href="/" class="social-media-button"><i class="fa-brands fa-facebook"></i></a>
-                  <a href="/" class="social-media-button"><i class="fa-brands fa-twitter"></i></a>
-                  <a href="/" class="social-media-button"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="/" class="social-media-button"><i class="fa-brands fa-linkedin"></i></a>
-                  <a href="/" class="social-media-button"><i class="fa-solid fa-wifi"></i></a>
+                  <a href="/"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="/"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="/"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="/"><i class="fa-brands fa-linkedin"></i></a>
+                  <a href="/"><i class="fa-solid fa-wifi"></i></a>
                 </div>
               </div>
               <div class="payments-info">
