--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="shopping-cart-container">
                   <div class="shopping-cart-items">
                     <div class="shopping-cart-item">
-                      <img src="/images/komodine-me-dru-teak.jpg" alt="">
+                      <img src="/images/console-teak.jpg" alt="">
                       <div class="shopping-card-bought-details">
                         <span>Vulputate justo</span>
                         <span>Qty 1</span>
@@ -68,7 +68,7 @@
                       </button>
                     </div>
                     <div class="shopping-cart-item">
-                      <img src="/images/komodine-me-dru-teak.jpg" alt="">
+                      <img src="/images/console-teak.jpg" alt="">
                       <div class="shopping-card-bought-details">
                         <span>Phasellus ven enderit</span>
                         <span>Qty 1</span>
@@ -138,17 +138,21 @@
               <p class="product-category">Modern Furniture</p>
               <p class="product-price">$250.45</p>
             </div>
-            <div class="page-content-ads-item-console">
-              <p class="console-name">Console Tables</p>
-              <p class="console-category">Beoplay A1</p>
-              <p class="console-category">Sound Accessories</p>
-              <i class="fa-solid fa-circle-arrow-right"></i>
+            <div class="page-content-ads-item-slim">
+              <p class="page-content-item-slim-name">Console Tables</p>
+              <p class="page-content-item-slim-category">Beoplay A1</p>
+              <p class="page-content-item-slim-category">Sound Accessories</p>
+              <button class="confirm-button">
+                <i class="fa-solid fa-circle-arrow-right"></i>
+              </button>
             </div>
-            <div class="page-content-ads-item-console inverted">
-              <p class="console-name">Console Tables</p>
-              <p class="console-category">Beoplay A1</p>
-              <p class="console-category">Sound Accessories</p>
-              <i class="fa-solid fa-circle-arrow-right"></i>
+            <div class="page-content-ads-item-slim inverted">
+              <p class="page-content-item-slim-name">Console Tables</p>
+              <p class="page-content-item-slim-category">Beoplay A1</p>
+              <p class="page-content-item-slim-category">Sound Accessories</p>
+              <button class="confirm-button">
+                <i class="fa-solid fa-circle-arrow-right"></i>
+              </button>
             </div>
           </div>
           <div class="page-content-services">
@@ -186,10 +190,10 @@
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                  <button>Shop Now</button>
+                  <button class="shop-now-button">Shop Now</button>
               </div>
             </div>
-            <div class="shop-actions-item">
+            <div class="shop-actions-item hall">
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
@@ -609,22 +613,18 @@
             </div>
           </div>
           <div class="page-content-ads">
-            <div class="shop-actions-item">
+            <div class="shop-actions-item lamp">
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <a href="/" class="shop-now-button">
-                  <button>Shop Now</button>
-                </a>
+                  <button class="shop-now-button">Shop Now</button>
               </div>
             </div>
-            <div class="shop-actions-item">
+            <div class="shop-actions-item chair">
               <div class="shop-actions-container">
                 <h2>Living Room Set</h2>
                 <h1>Hauteville Plywood New Chair</h1>
-                <a href="/" class="shop-now-button">
-                  <button>Shop Now</button>
-                </a>
+                  <button class="shop-now-button">Shop Now</button>
               </div>
             </div>
           </div>
